# mcp-midi

./: .gitignore  CLAUDE.md  Dockerfile  INSTALL.md  README.md  all_notes_off.py  deluge_test.py  drum_pattern.txt  happy_birthday.txt  pyproject.toml  setup.py  setup.sh  simple_melody.txt  tracker_integration.py  tracker_test.py  uv.lock.old
diagrams/: api-endpoints.mmd  claude-integration.mmd  midi-communication.mmd  project-structure.mmd  system-overview.mmd  tracker-structure.mmd
docs/: CLAUDE_DESKTOP_INTEGRATION.md
examples/: claude_desktop_config.json  claude_interaction.md  generate_midi.py  play_scale.py  song_example.py  test_midi_content.py
scripts/: clean_lockfile.py  simple_midi_test.py
src/: __init__.py  claude_client.py  main.py  server.py
src/mcp_midi/: __init__.py  all_notes_off.py  midi_file.py  server.py  tracker_interface.py  tracker_parser.py
src/mcp_midi/song/: __init__.py  manager.py  song.py
tests/: test_client.py  test_server.py
tracker/: __init__.py  tracker.py
