[project]
name = "mcp-midi"
version = "0.1.0"
description = "A MCP server for controlling MIDI devices"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "mido>=1.2.10",
    "python-rtmidi>=1.4.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=6.0"]

[project.scripts]
mcp-midi = "mcp_midi:main"
